# django-codecompare

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
codecompare/: __init__.py  apps.py
codecompare/analyzers/: complexity.py  duplicates.py
codecompare/api/: urls.py  views.py
codecompare/ast_engine/: ast_comparator.py  python_ast.py  treesitter_engine.py
codecompare/cache/: cache_manager.py
codecompare/cli/: commands.py
codecompare/core/: exceptions.py  interfaces.py  registry.py  services.py  types.py
codecompare/diff_engine/: myers.py
codecompare/migrations/: 0001_initial.py
codecompare/models/: models.py
codecompare/parsers/: generic_parser.py  javascript_parser.py  language_detector.py  python_parser.py
codecompare/semantic_engine/: fingerprinting.py  plagiarism.py  rename_detector.py
codecompare/similarity/: aggregator.py  cosine.py  jaccard.py  levenshtein.py  token_similarity.py
codecompare/tasks/: comparison_tasks.py
codecompare/utils/: hashing.py  security.py  streaming.py
codecompare/websocket/: consumers.py  routing.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
docker/: Dockerfile  Dockerfile.worker
docker/nginx/: nginx.conf
examples/: basic_compare.py
k8s/: deployment.yaml  hpa.yaml  service.yaml
templates/: home.html
tests/: test_api.py  test_ast_engine.py  test_diff_engine.py  test_similarity.py
tests/benchmarks/: benchmark_comparison.py
