[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "django-codecompare"
version = "1.0.0"
description = "Production-grade Django package for code diff, similarity, and plagiarism detection"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "CodeCompare Team"}]
keywords = ["django", "diff", "code-comparison", "plagiarism", "ast", "similarity"]

dependencies = [
    "Django>=5.0,<6.0",
    "djangorestframework>=3.15",
    "pygments>=2.17",
    "click>=8.1",
]

[project.scripts]
codecompare = "codecompare.cli.commands:main"

[tool.setuptools.packages.find]
include = ["codecompare*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--tb=short"]

[tool.coverage.run]
source = ["codecompare"]
omit = ["*/migrations/*", "*/tests/*"]
