[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-codecompare"
version = "1.0.0"
description = "Production-grade Django package for code diff, similarity, and plagiarism detection"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Shoyim Obloqulov", email = "obloqulovshoyim1@gmail.com"}]
maintainers = [{name = "Shoyim Obloqulov", email = "obloqulovshoyim1@gmail.com"}]
keywords = ["django", "diff", "code-comparison", "plagiarism", "ast", "similarity", "myers-diff", "levenshtein"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control",
    "Topic :: Text Processing :: General",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    "Django>=5.0,<6.0",
    "djangorestframework>=3.15",
    "pygments>=2.17",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/shoyim/django-codecompare"
Repository = "https://github.com/shoyim/django-codecompare"
"Bug Tracker" = "https://github.com/shoyim/django-codecompare/issues"
Changelog = "https://github.com/shoyim/django-codecompare/releases"

[project.scripts]
codecompare = "codecompare.cli.commands:main"

[tool.setuptools.packages.find]
include = ["codecompare*"]

[tool.setuptools.package-data]
codecompare = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--tb=short"]

[tool.coverage.run]
source = ["codecompare"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
